# sg-helper

./: config.json  config.py  game_handler.py  main.py  pyproject.toml  sg-util.ui  ui.py  util.py  window.py
Resources/: groupbox.qss  resources.qrc
capture/: __init__.py  process.py
