[project]
name = "sg-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=9.0.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pyside6>=6.11.1",
    "pywin32>=312",
    "rapidocr-onnxruntime>=1.4.4",
]
